--- a/cajon-lang.cabal
+++ b/cajon-lang.cabal
@@ -43,6 +43,7 @@ library
     exposed-modules:
         Ast
         Lexer
+        Parser
     other-modules:
         Paths_cajon_lang
     hs-source-dirs:
@@ -51,4 +52,5 @@ library
         base ^>=4.14.3.0
         , megaparsec
         , text
+        , parser-combinators
     default-language: Haskell2010
