Take input from command line argument and print the AST

--- a/cajon-lang.cabal
+++ b/cajon-lang.cabal
@@ -37,6 +37,7 @@ executable cajon-lang
     build-depends:
         base ^>=4.14.3.0
         , cajon-lang
+        , text
     default-language: Haskell2010
 
 library
