Define possible semantic error types

--- a/cajon-lang.cabal
+++ b/cajon-lang.cabal
@@ -45,6 +45,7 @@ library
         Ast
         Lexer
         Parser
+        Error
     other-modules:
         Paths_cajon_lang
     hs-source-dirs:
