--- a/cajon-lang.cabal
+++ b/cajon-lang.cabal
@@ -38,6 +38,7 @@ executable cajon-lang
         base ^>=4.14.3.0
         , cajon-lang
         , text
+        , optparse-applicative
     default-language: Haskell2010
 
 library
