--- a/cajon-lang.cabal
+++ b/cajon-lang.cabal
@@ -39,6 +39,7 @@ executable cajon-lang
         , cajon-lang
         , text
         , optparse-applicative
+        , megaparsec
     default-language: Haskell2010
 
 library
